# python-uv-starter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mypackage/: __init__.py  main.py
tests/: __init__.py  test_main.py
